Fixed the background jump

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -239,7 +239,6 @@ input, textarea {
 /* Background Image */
 .localStreet {
   position: fixed;
-  bottom: 0px;
   width: 100%;
   height: 400px; /* 60% + 40% (from "top") = 100% of the screen's height*/
   z-index: -2;
